# Nawi12

./: ADMIN_DASHBOARD_README.md  README.md  pyproject.toml  replit.md
backend/: app.py  config.py  requirements.txt  wsgi.py
backend/instance/: nawi.db
backend/models/: __init__.py
backend/routes/: activity.py  auth.py  backup.py  dashboard.py  media.py  pages.py  settings.py  users.py
backend/utils/: auth.py
frontend/: package-lock.json  package.json
