[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator==2.0.0",
    "flask-cors==4.0.0",
    "flask-jwt-extended==4.5.2",
    "flask-limiter==3.5.0",
    "flask-mail==0.9.1",
    "flask-sqlalchemy==3.0.5",
    "flask==2.3.3",
    "gunicorn==21.2.0",
    "pillow==10.0.1",
    "python-dotenv==1.0.0",
    "werkzeug==2.3.7",
    "psycopg2-binary>=2.9.10",
    "bcrypt==4.1.1",
    "google-auth==2.23.4",
    "google-auth-oauthlib==1.1.0",
    "google-auth-httplib2==0.1.1",
    "python-magic==0.4.27",
    "redis==5.0.1",
    "celery==5.3.4",
    "requests==2.31.0",
]
